ElasticKubernetesService/1-apiPython.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-python
  template:
    metadata:
      labels:
        app: api-python
    spec:
      containers:
      - image: olegzhel/challenge01api-python:v0.2
        name: api-python
        ports:
        - containerPort: 5000
        resources:
#          limits:
#            cpu: 1000m
#            memory: "900Mi"
          requests:
            cpu: 400m            
            memory: "400Mi"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - managed-nodes
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - api-python
            topologyKey: kubernetes.io/hostname
            namespaces:
            - default


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-python
  name: api-python
spec:
  ports:
    - name: service-python-port-name
      port: 5000
      targetPort: 5000 
      protocol: TCP
  selector:
    app: api-python
