ElasticKubernetesService/apiDotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api-dotnet
  name: api-dotnet
spec:
  selector:
    matchLabels:
      io.kompose.service: api-dotnet
  template:
    metadata:
      labels:
        io.kompose.service: api-dotnet
    spec:
      containers:
        - image: olegzhel/challenge01api-dotnet:v0.5
          name: api-dotnet
          ports:
          - containerPort: 80
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api-dotnet
  name: api-dotnet
spec:
  ports:
    - name: service-dotnet-port-name
      port: 80
      targetPort: 80 
      protocol: TCP
  selector:
    io.kompose.service: api-dotnet
