ElasticKubernetesService/apiPython.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api-python
  name: api-python
spec:
  selector:
    matchLabels:
      io.kompose.service: api-python
  template:
    metadata:
      labels:
        io.kompose.service: api-python
    spec:
      containers:
        - image: olegzhel/challenge01api-python:v0.2
          name: api-python
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api-python
  name: api-python
spec:
  ports:
    - name: service-python-port-name
      port: 5000
      targetPort: 5000 
      protocol: TCP
  selector:
    io.kompose.service: api-python
